KeePassDroid (1.5.2)
  * Various crash fixes
  * Fix group and entry deletion

KeePassDroid (1.5.1)
  * Handle .kdbx file extension

KeePassDroid (1.5)
  * Add beta read-only .kdbx support.

KeePassDroid (1.0.6)
  * Update Italian translations
  * Font size setting
  * URL decoding fix
  * TAN handling

KeePassDroid (1.0.5.1)
  * Restore timeout to 5 minutes instead of 20 seconds

KeePassDroid (1.0.5)
  * Fix search after lock bug
  * Add option to disable password masking by default
  * Change service handling

KeePassDroid (1.0.4)
  * Fix CRLF string issues

KeePassDroid (1.0.3)
  * Update Italian translations
  * Fix crash on saving entries
  * Fix way empty strings were being saved (this made it look like there was
    attachment in the Windows KeePass client).

KeePassDroid (1.0.2)
  * Fix file associations

KeePassDroid (1.0.1)
  * Fix crash on resume
  * Fix memory leak in NativeAESCipherSpi
  * Search index performance

KeePassDroid (1.0)
  * Performance!

KeePassDroid (0.9.7)
  * Update French translations
  * Save and load performance improvement
  * Fix locking issues with preference screen

KeePassDroid (0.9.6)
  * Add Russian translations
  * Revamp settings
  * Fix comment field in entries
  * Fix loading after creating new dbs
  * Fix opening from file on initial run

KeePassDroid (0.9.5)
  * Add notification based username and password copy
  * Add German translations
  * Try to create parent directory when creating database

KeePassdroid (0.9.4)
  * Add French translation 
  * Fix crash on timeout.
  
KeePassdroid (0.9.3)
  * Fix up translations
  * Fix up timeouts.
  * Display expiration time.

KeePassDroid (0.9.2)
  * Add Italian translations
  * Multiple screen sizes
  
KeePassDroid (0.9.1)
  * Add donate link
  * Sort case insensitive
  * Add show password checkbox

KeePassDroid (0.9)
  * Allow the creation of new databases on the device
  * Sort entries and groups when adding or renaming.

KeePassDroid (0.6)
  * Add database settings