@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.android.keepass"
-      android:versionName="1.5.2" android:versionCode="43">
+      android:versionName="1.5.3" android:versionCode="44">
     <uses-sdk android:minSdkVersion="3" android:targetSdkVersion="4"/>
 	<supports-screens
       android:smallScreens="true"
